adding the header icons from heroicons and minimals changes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-
-body {
-    @apply bg-back;
-    @apply text-gray-300;
+@layer base {
+    body {
+        @apply bg-back;
+        @apply text-gray-300;
+    }
 }
